# lule

./: .envrc  .gitignore  .shell.nix  404.html  AUTHORS.md  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SYSTEMD.md  chapter_1.html  chapter_2.html  cliff.toml  colors  colors.json  devbox.json  flake.nix  justfile  lule.service.example  palette  print.html  run.sh  searchindex.js  searchindex.json  toc.html  toc.js  wallpaper
.github/workflows/: book.yml  release.yml  tests.yml
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md
resources/: logo.txt
scripts/: apply_colors.sh  lule_colors
src/: cli.rs  fun.rs  gen.rs  main.rs  scheme.rs  show.rs  var.rs
src/cli/: colors.rs  config.rs  create.rs  daemon.rs  mod.rs  test.rs
src/fun/: echo.rs  fifo.rs  text.rs
src/generator/: apply.rs  execute.rs  generate.rs  kmeans.rs  mod.rs  palette.rs  write.rs
src/show/: canvas.rs  format.rs  viuwer.rs
src/var/: args.rs  defs.rs  envi.rs  mod.rs  pipe.rs  temp.rs
templates/: colors.sh
