[package]
name = "lule"
version = "0.4.2"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "a command line to set 255 colors on tty's and other places that use ANSI colors"
edition = "2024"

[dependencies]

dirs = "3.0.1"
atty = "0.2.14"
clap = "2.33.3"
rand = "0.8.0"
colored = "2.0.0"
pastel = "0.9.0"
image = "0.23.2"
rayon = "1.5"
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
getset = "0.1.1"
viuer = "0.3.1"
crossterm = "0.19.0"
anyhow = "1.0.37"
daemonize = "0.5"
notify = "4.0.15"
nix = "0.19.1"
tokio = { version= "1.0.1", features = ["full"] }
futures = "0.3.8"
tera = "1.0"
fork = "0.1.18"
nom = "5"
